# uplevel_ai

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
artifacts/graph/: graph.mmd
scripts/: visualize_graph.py
src/: __init__.py  config.py
src/agents/: __init__.py  graph.py  observation.py  reflection.py  report.py  scoring.py
src/api/: __init__.py  main.py
src/api/routes/: __init__.py  reflection.py
src/ingestion/: __init__.py  ado_jira.py  calendar.py  github.py  transcripts.py
src/memory/: __init__.py  neo4j.py  postgres.py
src/reports/: __init__.py  daily.py  weekly.py
src/scoring/: __init__.py  classifier.py  rubric.py
tests/agents/: test_graph.py
tests/api/: test_health.py
tests/reports/: test_daily.py
tests/scoring/: test_rubric.py
